# Auto_Api

./: .gitignore  API.md  API_Endpoint.py  Base_model.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Config.py  Deep_Learning_Module.py  Dockerfile  Model_Library.py  Model_Types.py  Neptune.py  Optimization_Suite.py  READ.Md  README.Md  lightning_auto.py  model.pt  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  train.py  train_2.py  train_3.py  visualization.py
.github/: .flake8  Dockerfile  FUNDING.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml  main_2.yml
Configs/: setup.py
Endpoints/: API_Endpoint.py  API_Monitoring.py  API_Usage.py  Auth.py  CLI.py  Dashboard.py  Main.py  app.py  config_templates.py
Models/: decision_tree_model.pt  gmm_model.pt  kmeans_model.pt  lightgbm_model.pt  linear_model.pt  model.pt  model_2.pt  naive_bayes_model.pt  random_forest_model.pt  svm_model.pt
Templates/: index.html
Train_Files/: Train_10.py  Train_11.py  Train_12.py  Train_4.py  Train_6.py  Train_7.py  Train_8.py  Train_9.py  linear_regression_model.pth  train.py  train_2.py  train_3.py
Writerside/: API.md  ad.tree  hiw.tree  htu.tree  mp.tree  writerside.cfg
Writerside/cfg/: buildprofiles.xml
Writerside/topics/: How_It_works.md  Model_Performance.md  automl-api-docs.md  how-to-use.md  starter-topic.md
lightning_logs/version_0/: events.out.tfevents.1731017697.DESKTOP-6VACG9G.13736.0  hparams.yaml
lightning_logs/version_1/: events.out.tfevents.1731017826.DESKTOP-6VACG9G.21496.0
lightning_logs/version_10/: metrics.csv
lightning_logs/version_12/: metrics.csv
lightning_logs/version_13/: metrics.csv
lightning_logs/version_14/: metrics.csv
lightning_logs/version_17/: metrics.csv
lightning_logs/version_18/: hparams.yaml
lightning_logs/version_19/: hparams.yaml  metrics.csv
lightning_logs/version_2/: events.out.tfevents.1731018285.DESKTOP-6VACG9G.19796.0
lightning_logs/version_20/: metrics.csv
lightning_logs/version_21/: metrics.csv
lightning_logs/version_22/: metrics.csv
lightning_logs/version_23/: hparams.yaml  metrics.csv
lightning_logs/version_3/: hparams.yaml  metrics.csv
lightning_logs/version_35/: metrics.csv
lightning_logs/version_36/: hparams.yaml
lightning_logs/version_38/: hparams.yaml  metrics.csv
lightning_logs/version_39/: metrics.csv
lightning_logs/version_4/: metrics.csv
lightning_logs/version_42/: metrics.csv
lightning_logs/version_5/: hparams.yaml  metrics.csv
lightning_logs/version_6/: hparams.yaml  (+1 more)
(+91 files in other folders)
