[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-ml-api"
version = "0.0.3"
description = "Automated Machine Learning Pipeline with API Interface"
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "torch==2.2.0",
    "pytorch-lightning==2.1.1",
    "transformers==4.48.0",
    "numpy==1.24.4",
    "pandas==2.0.3",
    "matplotlib==3.7.1",
    "fastapi==0.109.1",
    "uvicorn==0.15.0",
    "requests==2.31.0",
    "scikit-learn==1.3.0",
    "seaborn==0.11.2",
    "pydantic==1.10.18",
    "python-jose==3.3.0",
    "python-dotenv==1.0.0",
    "rich==13.9.0",
    "click==8.1.7",
    "optuna==4.1.0",
    "config==0.5.1",
    "PyJWT==2.10.1",
    "prometheus-client==0.21.0",
    "scipy==1.13.1",
    "neptune==2.0.0a9",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
    "pytest-cov>=4.1.0",
]

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
^/docs
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0303",  # trailing-whitespace
    "C0330",  # wrong-hanging-indentation
    "C0326",  # bad-whitespace
    "W0621",  # redefined-outer-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0511",  # do later
]

[tool.pylint.FORMAT]
max-line-length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "silent"
disallow_untyped_defs = false
disallow_incomplete_defs = false
plugins = [
    "numpy.typing.mypy_plugin"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --cov=. --cov-report=xml"
markers = [
    "slow: marks tests as slow",
    "serial: marks tests that should run serially",
]

[project.urls]
Homepage = "https://github.com/DarkStarStrix/auto-ml-api"
Documentation = "https://github.com/DarkStarStrix/Auto_Api/tree/master/Writerside"
Repository = "https://github.com/DarkStarStrix/Auto_Api"
Changelog = "https://github.com/DarkStarStrix/auto-ml-api/blob/main/CHANGELOG.md"
